--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@common/*": ["src/app/common/*"],
+      "@core/*": ["src/app/core/*"],
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
